# history-server

./: .coveragerc  .gitignore  README.md  dockerfile  init.py  main.py  pyproject.toml  requirements.txt  sonar.sh
.github/workflows/: build.yml  main.yml
modules/logger/: logger.py
src/apis/: base.py
src/apis/chauffagistes_pool/: base.py  routes.py
src/apis/chauffagistes_pool/models/: BestRecord.py  PoolRuntime.py  User.py  Worker.py
src/apis/chauffagistes_pool/utils/: upload.py
src/core/: __init__.py  models.py
src/core/services/stats/v1/: stats.py
src/core/services/weights/v1/: weights.py
src/crawlers/: stats.py
src/database/: postgre.py
src/handlers/v1/: __init__.py  stats.py  weights.py
src/handlers/v1/utils/: parsers.py  serializers.py  subapp.py
src/historyserver/: __main__.py  cors.py  init.py  main.py
src/historyserver/apis/: utils.py
src/historyserver/apis/chauffagistes_pool/: base.py  routes.py
src/historyserver/crawlers/: stats.py
src/historyserver/functions/: converter.py  gather_users.py  upload.py
src/historyserver/functions/database/: postgre.py
src/historyserver/models/: APIData.py  Node.py  Pool.py  PoolHashrates.py  PoolShares.py  Repartition.py
src/historyserver/modules/logger/: consoleLogger.py  fileLogger.py  line.py
src/historyserver/modules/logger/abc/: abstractLogger.py
src/middlewares/: logger.py
src/utils/: cors.py  formatter.py
tests/: test_converter.py
